package utils.framework;

public interface Game {

}
